--- a/simple_shopping_cart/index.html
+++ b/simple_shopping_cart/index.html
@@ -15,6 +15,54 @@
     <link href="css/custom.css" rel="stylesheet">
   </head>
   <body>
-
+    <div class="container">
+      <h1 class="text-left my-4">Shopping Cart</h1>
+      <div class="row">
+        <div class="col-12">
+          <table class="table table-responsive">
+            <tbody>
+              <tr>
+                <td class="name p-right-200">Bananas</td>
+                <td class="cost">$50</td>
+                <td class="quantity"><b>QTY</b><input type="number" value="1" /><button class="btn btn-light btn-sm cancel" style="border: thin;">Cancel</button></td>
+                <td class="price">$20</td>
+              </tr>
+              <tr>
+                <td class="name p-right-200">Bananas</td>
+                <td class="cost">$50</td>
+                <td class="quantity"><b>QTY</b><input type="number" value="1" /><button class="btn btn-light btn-sm cancel" style="border: thin;">Cancel</button></td>
+                <td class="price">$20</td>
+              </tr>
+              <tr>
+                <td class="name p-right-200">Bananas</td>
+                <td class="cost">$50</td>
+                <td class="quantity"><b>QTY</b><input type="number" value="1" /><button class="btn btn-light btn-sm cancel" style="border: thin;">Cancel</button></td>
+                <td class="price">$20</td>
+              </tr>
+              <tr>
+                <td class="name p-right-200">Bananas</td>
+                <td class="cost">$50</td>
+                <td class="quantity"><b>QTY</b><input type="number" value="1" /><button class="btn btn-light btn-sm cancel" style="border: thin;">Cancel</button></td>
+                <td class="price">$20</td>
+              </tr>
+              <tr>
+                <td class="name p-right-200">Bananas</td>
+                <td class="cost">$50</td>
+                <td class="quantity"><b>QTY</b><input type="number" value="1" /><button class="btn btn-light btn-sm cancel" style="border: thin;">Cancel</button></td>
+                <td class="price">$20</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <form class="col-12 mt-2 mb-4" id="addStock">
+          <input class="mx-2" name="name" type="text" placeholder="Name" required/>
+          <input class="mx-2" name="cost" type="number" placeholder="Cost"/>
+          <button class="btn btn-primary btn-md">Create</button>
+        </form>
+        <div class="col-12 col-md-6">
+          <h3>Total: $ <span id="totalPrice"></span></h3>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
