--- a/simple_shopping_cart/index.html
+++ b/simple_shopping_cart/index.html
@@ -22,34 +22,34 @@
           <table class="table table-responsive">
             <tbody>
               <tr>
-                <td class="name p-right-200">Bananas</td>
-                <td class="cost">$50</td>
-                <td class="quantity"><b>QTY</b><input type="number" value="1" /><button class="btn btn-light btn-sm cancel" style="border: thin;">Cancel</button></td>
-                <td class="price">$20</td>
+                <td class="name">Bananas</td>
+                <td class="cost">50</td>
+                <td class="quantityRow"><b>QTY</b><input class="quantity" type="number" value="1" /><button class="btn btn-light btn-sm cancel" style="border: thin;">Cancel</button></td>
+                <td class="price">20</td>
               </tr>
               <tr>
-                <td class="name p-right-200">Bananas</td>
-                <td class="cost">$50</td>
-                <td class="quantity"><b>QTY</b><input type="number" value="1" /><button class="btn btn-light btn-sm cancel" style="border: thin;">Cancel</button></td>
-                <td class="price">$20</td>
+                <td class="name">Bananas</td>
+                <td class="cost">50</td>
+                <td class="quantityRow"><b>QTY</b><input class="quantity" type="number" value="1" /><button class="btn btn-light btn-sm cancel" style="border: thin;">Cancel</button></td>
+                <td class="price">20</td>
               </tr>
               <tr>
-                <td class="name p-right-200">Bananas</td>
-                <td class="cost">$50</td>
-                <td class="quantity"><b>QTY</b><input type="number" value="1" /><button class="btn btn-light btn-sm cancel" style="border: thin;">Cancel</button></td>
-                <td class="price">$20</td>
+                <td class="name">Bananas</td>
+                <td class="cost">50</td>
+                <td class="quantityRow"><b>QTY</b><input class="quantity" type="number" value="1" /><button class="btn btn-light btn-sm cancel" style="border: thin;">Cancel</button></td>
+                <td class="price">20</td>
               </tr>
               <tr>
-                <td class="name p-right-200">Bananas</td>
-                <td class="cost">$50</td>
-                <td class="quantity"><b>QTY</b><input type="number" value="1" /><button class="btn btn-light btn-sm cancel" style="border: thin;">Cancel</button></td>
-                <td class="price">$20</td>
+                <td class="name">Bananas</td>
+                <td class="cost">50</td>
+                <td class="quantityRow"><b>QTY</b><input class="quantity" type="number" value="1" /><button class="btn btn-light btn-sm cancel" style="border: thin;">Cancel</button></td>
+                <td class="price">20</td>
               </tr>
               <tr>
-                <td class="name p-right-200">Bananas</td>
-                <td class="cost">$50</td>
-                <td class="quantity"><b>QTY</b><input type="number" value="1" /><button class="btn btn-light btn-sm cancel" style="border: thin;">Cancel</button></td>
-                <td class="price">$20</td>
+                <td class="name">Bananas</td>
+                <td class="cost">50</td>
+                <td class="quantityRow"><b>QTY</b><input class="quantity" type="number" value="1" /><button class="btn btn-light btn-sm cancel" style="border: thin;">Cancel</button></td>
+                <td class="price">20</td>
               </tr>
             </tbody>
           </table>
@@ -60,7 +60,7 @@
           <button class="btn btn-primary btn-md">Create</button>
         </form>
         <div class="col-12 col-md-6">
-          <h3>Total: $ <span id="totalPrice"></span></h3>
+          <h3>Total: $<span id="totalPriceSpan"></span></h3>
         </div>
       </div>
     </div>
