Final update to application.js added create product functionality

--- a/simple_shopping_cart/index.html
+++ b/simple_shopping_cart/index.html
@@ -23,38 +23,32 @@
             <tbody>
               <tr>
                 <td class="name">Bananas</td>
-                <td class="cost">50</td>
+                <td class="cost">$<span class="costSpan">5</td>
                 <td class="quantityRow"><b>QTY</b><input class="quantity" type="number" value="1" /><button class="btn btn-light btn-sm cancel" style="border: thin;">Cancel</button></td>
-                <td class="price">20</td>
+                <td class="price"></td>
               </tr>
               <tr>
                 <td class="name">Bananas</td>
-                <td class="cost">50</td>
+                <td class="cost">$<span class="costSpan">5</td>
                 <td class="quantityRow"><b>QTY</b><input class="quantity" type="number" value="1" /><button class="btn btn-light btn-sm cancel" style="border: thin;">Cancel</button></td>
-                <td class="price">20</td>
+                <td class="price"></td>
               </tr>
               <tr>
                 <td class="name">Bananas</td>
-                <td class="cost">50</td>
+                <td class="cost">$<span class="costSpan">5</td>
                 <td class="quantityRow"><b>QTY</b><input class="quantity" type="number" value="1" /><button class="btn btn-light btn-sm cancel" style="border: thin;">Cancel</button></td>
-                <td class="price">20</td>
+                <td class="price"></td>
               </tr>
               <tr>
                 <td class="name">Bananas</td>
-                <td class="cost">50</td>
+                <td class="cost">$<span class="costSpan">5</td>
                 <td class="quantityRow"><b>QTY</b><input class="quantity" type="number" value="1" /><button class="btn btn-light btn-sm cancel" style="border: thin;">Cancel</button></td>
-                <td class="price">20</td>
-              </tr>
-              <tr>
-                <td class="name">Bananas</td>
-                <td class="cost">50</td>
-                <td class="quantityRow"><b>QTY</b><input class="quantity" type="number" value="1" /><button class="btn btn-light btn-sm cancel" style="border: thin;">Cancel</button></td>
-                <td class="price">20</td>
+                <td class="price"></td>
               </tr>
             </tbody>
           </table>
         </div>
-        <form class="col-12 mt-2 mb-4" id="addStock">
+        <form class="col-12 mt-2 mb-4" id="addProduct">
           <input class="mx-2" name="name" type="text" placeholder="Name" required/>
           <input class="mx-2" name="cost" type="number" placeholder="Cost"/>
           <button class="btn btn-primary btn-md">Create</button>
