--- a/simple_shopping_cart/index.html
+++ b/simple_shopping_cart/index.html
@@ -53,9 +53,9 @@
           <input class="mx-2" name="cost" type="number" placeholder="Cost"/>
           <button class="btn btn-primary btn-md">Create</button>
         </form>
-        <div class="col-12 col-md-6">
+        <!--<div class="col-12 col-md-6">-->
           <h3>Total: $<span id="totalPriceSpan"></span></h3>
-        </div>
+        <!--</div>-->
       </div>
     </div>
   </body>
