--- a/simple_shopping_cart/index.html
+++ b/simple_shopping_cart/index.html
@@ -49,8 +49,8 @@
           </table>
         </div>
         <form class="col-12 mt-2 mb-4" id="addProduct">
-          <input class="mx-2" name="name" type="text" placeholder="Name" required/>
-          <input class="mx-2" name="cost" type="number" placeholder="Cost"/>
+          <input class="mx-2 productInput" name="name" type="text" placeholder="Name" required/>
+          <input class="mx-2 productInput" name="cost" type="number" placeholder="Cost"/>
           <button class="btn btn-primary btn-md">Create</button>
         </form>
         <!--<div class="col-12 col-md-6">-->
